# rosita

./: .clang-format  .clang-tidy  .clangd  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yaml
TUI/: asyncapi_editor.py  main.py  ros2_path_config.yaml  ui_utils.py
docs/: rosita-demo.cast
example/: asyncapi.md
example/html/: index.html
ros2_introspector/: CMakeLists.txt  package.xml
ros2_introspector/include/ros2_introspector/: asyncapi_generator.hpp  constants.hpp  introspection_helper.hpp  type_decription_client.hpp
ros2_introspector/src/: asyncapi_generator.cpp  introspection_helper.cpp  main.cpp  type_description_client.cpp
utils/: field_info.hpp  logger.hpp  return_value.hpp
